k8s/emailtidy-celery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: emailtidy-celery
  name: emailtidy-celery
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: emailtidy-celery
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: emailtidy-celery
    spec:
      containers:
        - args:
            - celery
            - -A
            - celery_worker.celery
            - worker
            - --loglevel=info
          image: zimd00d/email-tidy:celery
          name: emailtidy-celery
          resources: {}
      restartPolicy: Always
status: {}
