k8s/emailtidy-flower-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: emailtidy-flower
  name: emailtidy-flower
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: emailtidy-flower
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: emailtidy-flower
    spec:
      containers:
        - args:
            - celery
            - -A
            - celery_worker.celery
            - flower
            - --port=5555
          image: zimd00d/email-tidy:flower
          name: emailtidy-flower
          ports:
            - containerPort: 5555
          resources: {}
      restartPolicy: Always
status: {}
