k8s/emailtidy-py-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: emailtidy-py
  name: emailtidy-py
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: emailtidy-py
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: emailtidy-py
    spec:
      containers:
        - env:
            - name: CELERY_BROKER_URL
              valueFrom:
                configMapKeyRef:
                  key: CELERY_BROKER_URL
                  name: env
            - name: CELERY_RESULT_BACKEND
              valueFrom:
                configMapKeyRef:
                  key: CELERY_RESULT_BACKEND
                  name: env
            - name: EMAIL_CRYPT_MASTER_PASS
              valueFrom:
                configMapKeyRef:
                  key: EMAIL_CRYPT_MASTER_PASS
                  name: env
            - name: FIRST_SUPERUSER
              valueFrom:
                configMapKeyRef:
                  key: FIRST_SUPERUSER
                  name: env
            - name: FIRST_SUPERUSER_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: FIRST_SUPERUSER_PASSWORD
                  name: env
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: env
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: env
            - name: POSTGRES_SERVER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_SERVER
                  name: env
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: env
          image: zimd00d/email-tidy:py
          name: emailtidy-py
          ports:
            - containerPort: 8000
          resources: {}
      restartPolicy: Always
status: {}
