k8s/emailtidy-react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: emailtidy-react
  name: emailtidy-react
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: emailtidy-react
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: emailtidy-react
    spec:
      containers:
        - image: zimd00d/email-tidy:react
          name: emailtidy-react
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
