k8s/my-private-reg-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: private-reg
spec:
  containers:
  - name: emailtidy-db
    image: zimd00d/email-tidy:db
  - name: emailtidy-py
    image: zimd00d/email-tidy:py
  - name: emailtidy-react
    image: zimd00d/email-tidy:react
  - name: emailtidy-nginx
    image: zimd00d/email-tidy:nginx
  - name: emailtidy-celery
    image: zimd00d/email-tidy:celery
  - name: emailtidy-flower
    image: zimd00d/email-tidy:flower

  imagePullSecrets:
  - name: regcred
