k8s/emailtidy-flower-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: emailtidy-flower
  name: emailtidy-flower
spec:
  ports:
    - name: "5556"
      port: 5556
      targetPort: 5555
  selector:
    io.kompose.service: emailtidy-flower
status:
  loadBalancer: {}
